# veridion

./: .gitignore  pyproject.toml
.devcontainer/: devcontainer.json
subdirectory/: main.py
