[project]
name = "news-article-parser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.13.2",
    "langchain>=1.3.0",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.2.1",
    "libmagic>=1.0",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "python-magic>=0.4.27",
    "sentence-transformers>=5.5.0",
    "streamlit>=1.57.0",
    "torchvision>=0.27.0",
    "unstructured>=0.22.28",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
